[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "recengram"
version = "1.0.0"
description = "RecEngram: Dynamic Memory for Sequential Recommendation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = ["torch>=2.0", "numpy>=1.24", "tqdm>=4.65"]

[tool.setuptools.packages.find]
include = ["recengram*"]
